--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,12 +1,11 @@
 ---
-name: Tails Azimuth
+name: luz
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+occupation: 一名全栈工程师
+company: 待业
+email: 33cluz@gmail.com
+twitter: https://twitter.com/luz33c
+github: https://github.com/luz33c
 ---
 
 Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
