--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,15 +1,46 @@
 ---
-name: luz
-avatar: /static/images/avatar.png
-occupation: 一名全栈工程师
-company: 待业
+name: 刘亮
+occupation: 前端/全栈开发者
 email: 33cluz@gmail.com
 twitter: https://twitter.com/luz33c
 github: https://github.com/luz33c
+telephone: '17600081451'
+wechat: luz33c
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+因高中做个人站长接触开源pnp项目，选择计算机专业，成为后端工程师，经历过创业且成为产品经理，后来重返编程；成为全栈工程师，供职过10人规模的程序员客栈和500人规模的蜻蜓FM
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+之后得到过阿里&滴滴&携程&涂鸦智能&吉利汽车等公司认可（offer），但家庭当时出现状况，近1年重返工作后，并不顺利（参考👉）。
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+**现状:** 一边做开源项目，一边寻求一家成熟的公司（技术氛围&有挑战性&竞争力）
+
+## 项目经历
+
+**蜻蜓FM： <u>PC站&M站性能优化+ BFF开发</u>**
+
+- 两站首屏均有数倍的加载速度提升，请求包体积数倍缩小
+- pc站峰值服务器数从10台降到3台，m站5降2
+- 基建优化中发现了调用各个微服务API的有必要聚合，<u>于是自己申请了bff开发需求，并架构设计和实施这个BFF服务的开发</u>
+
+**蜻蜓FM：<u> 蜻蜓FM助眠解压的纯后端服务</u>**
+
+- mongodb+koa+redis开发，读需求大，写不高，涉及前期流量评估，表数据的分流+定时任务同步等
+- 难度不大，但是自己负责的最高QPS的纯后端项目
+
+**蜻蜓FM： <u>音频课程打卡+返现的学习系统</u>**
+
+`复杂样式` `数据库事务` `消息队列服务` `日志监控`
+
+- 前期独力开发新业务，到后期多人参与时，主导项目的技术
+- 一个人开发了：短链接服务，购买&加群小程序，涉及音频听课打卡&学习日历的H5应用，打补卡&返现服务等多个前后端服务
+- 解决了全渠道购买后引导加群的难题
+- 学习状态的获取，涉及学员是否是有效听完（跟返现挂钩）
+
+**其他项目：**
+
+- **web前端日志上报SDK: 0到1开发jssdk**，也探索运用新技术beaconApi+indexedDB
+- **基于Electron的IDE开发（外包）**：基于Electron+React+Chrome DevTools
+- **区块链钱包+合约部署平台**：
+  涉及技：JS+Solidity+PostgreSQL+Docker+react native（我也是最早用WalletConnect的中国开发者）
+- **多个H5活动页开发**：均有复杂的样式动画，一定的性能优化。
+- **正在开发的开源项目**：一个notifications管理系统
